syntax="proto3";
package coolcar;
option go_package="coolcar/proto/gen/go;trippb";

message Location {
  double latitude = 1;
  double longitude = 2;
}

enum TripStatus {
  TS_NOT_SPECIFIED = 0;
  NOT_STARTED = 1;
  IN_PROGRESS = 2;
  FINISHED = 3;
  PAID = 4;
}
message Trip {
  string start = 1;
  string end = 2;
  Location start_pos = 5;
  Location end_pos = 6;
  repeated Location path_locations = 7;
  int64 duration_sec = 3;
  int64 fee_cent = 4;
  TripStatus status = 8;
}

message GetTripRequest{
  string id =1;
}

message GetTripResponse{
  string id=1;
  Trip trip=2;
}

service TripService{
  rpc GetTrip (GetTripRequest) returns (GetTripResponse);
}
